--- a/index.html
+++ b/index.html
@@ -22,5 +22,14 @@ Your personal travel guide
 Excursion remembers places you like, and recommends new point of interest around you.
 </h4>
 
+<p>
+<img src="resources/images/camp.webp">
+</p>
+<img src="resources/images/phone.webp">
+<p>
+<h4 class="header--subheader">
+Coming soon for iPhone and Android 
+</h4>
+</p> <a class="link--cta" href="#">Download Excursion (Coming Soon!)</a>
 </body>
 </html>
