--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@ Excursion remembers places you like, and recommends new point of interest around
 Coming soon for iPhone and Android 
 </h4>
 </p> <a class="link--cta" href="#">Download Excursion (Coming Soon!)</a>
+<p class="footer-copyright">© Excursion</p>
 </body>
 </html>
